--- a/src/desktop.css
+++ b/src/desktop.css
@@ -116,7 +116,8 @@
             position: absolute;
             left: 6vw;
             z-index: 2;
-            filter: brightness(0.9);
+            opacity: 0.8;
+            filter: brightness(0.85);
           }
 
           .fullscreen-poster3 {
@@ -124,7 +125,8 @@
             position: absolute;
             left: 10vw;
             z-index: 1;
-            filter: brightness(0.8);
+            opacity: 0.6;
+            filter: brightness(0.7);
           }
     
         .inner-fullscreen-content-box {
@@ -143,6 +145,7 @@
           transition: all 0.1s ease;
           user-select: none;
           margin: 10px 0;
+          font-size: 40px;
         }
         
           .switchmovie-active:hover {
@@ -155,6 +158,7 @@
           pointer-events: none;
           user-select: none;
           margin: 10px 0;
+          font-size: 40px;
         }
     
         /*.movie-logo-img {
@@ -184,7 +188,7 @@
           margin: 0;
           color: #efefef;
           text-transform: uppercase;
-          font-size: 1vw;
+          font-size: 1.6vw;
           letter-spacing: 2px;
         }
     
@@ -210,6 +214,18 @@
               display: none;
             }
 
+          }
+
+        .movie-rating-homepage {
+          color: lightgray;
+          font-size: 2vw;
+          display: flex;
+          align-items: center;
+          margin-bottom: 10px;
+        }
+
+          .movie-rating-homepage span {
+            font-size: 2vw;
           }
     
         .details-button {
@@ -404,7 +420,7 @@
       min-width: 260px;
       position: sticky;
       padding-right: 15px;
-      top: 15px;
+      top: 55px;
       margin-top: -170px;
       align-items: flex-end;
     }
