--- a/src/desktop.css
+++ b/src/desktop.css
@@ -1,5 +1,9 @@
 @media (min-width: 768px) {
 
+    .desktop-display-none {
+      display: none;
+    }
+
     /*        NAVBAR        */
     
     .nav-box {
@@ -389,10 +393,10 @@
     /*        MOVIEPAGE       */
     
     .backdrop-box {
-        /*background-image: linear-gradient(90deg,#171717 0,rgba(23, 23, 23,.986) .97%,rgba(23, 23, 23,.945) 2.07833333%,rgba(23, 23, 23,.883) 3.29666667%,rgba(23, 23, 23,.803) 4.60166667%,rgba(23, 23, 23,.711) 5.96666667%,rgba(23, 23, 23,.61) 7.365%,rgba(23, 23, 23,.504) 8.77166667%,rgba(23, 23, 23,.398) 10.16%,rgba(23, 23, 23,.296) 11.505%,rgba(23, 23, 23,.203) 12.78%,rgba(23, 23, 23,.122) 13.95833333%,rgba(23, 23, 23,.059) 15.01666667%,rgba(23, 23, 23,.016) 15.92833333%,rgba(23, 23, 23,0) 16.66666667%,rgba(23, 23, 23,0) 83.33333333%,rgba(23, 23, 23,.016) 84.07166667%,rgba(23, 23, 23,.059) 84.98333333%,rgba(23, 23, 23,.122) 86.04166667%,rgba(23, 23, 23,.203) 87.22%,rgba(23, 23, 23,.296) 88.495%,rgba(23, 23, 23,.398) 89.84%,rgba(23, 23, 23,.504) 91.22833333%,rgba(23, 23, 23,.61) 92.635%,rgba(23, 23, 23,.711) 94.03333333%,rgba(23, 23, 23,.803) 95.39833333%,rgba(23, 23, 23,.883) 96.70333333%,rgba(23, 23, 23,.945) 97.92166667%,rgba(23, 23, 23,.986) 99.03%,#171717),linear-gradient(0deg,#171717 0,#171717 21.48148148%,rgba(23, 23, 23,.986) 23.63703704%,rgba(23, 23, 23,.945) 26.1%,rgba(23, 23, 23,.883) 28.80740741%,rgba(23, 23, 23,.803) 31.70740741%,rgba(23, 23, 23,.711) 34.74074074%,rgba(23, 23, 23,.61) 37.84814815%,rgba(23, 23, 23,.504) 40.97407407%,rgba(23, 23, 23,.398) 44.05925926%,rgba(23, 23, 23,.296) 47.04814815%,rgba(23, 23, 23,.203) 49.88148148%,rgba(23, 23, 23,.122) 52.5%,rgba(23, 23, 23,.059) 54.85185185%,rgba(23, 23, 23,.016) 56.87777778%,rgba(23, 23, 23,0) 58.51851852%);*/
         position: relative;
         width: 100%;
         overflow: hidden;
+        aspect-ratio: 3840 / 2160;
     }
 
     .backdrop-gradient {
